--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>	
 	<div id="menuLeft">
 		<div id="testoLeft">
-			<a href="index.php" class = "testoLinkMenuLeft"> Homepage </a>
+			<a href="index.html" class = "testoLinkMenuLeft"> Homepage </a>
 			<br><br><a href="richiesta.php" class="testoLinkMenuLeft"> Crea Richiesta </a>
 			<br><br><br>
 			<a> Funzioni Disponibili: </a> <br><br>
