--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<a id="testoTitolo" class="centroVert"> Banca del Tempo </a>
 	</div>	
 		<br><br>
-		<iframe> src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Hintersee-Hochkalter.jpg/1000px-Hintersee-Hochkalter.jpg" height="40%" width="50%"</iframe>
+		<iframe> src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Hintersee-Hochkalter.jpg/1000px-Hintersee-Hochkalter.jpg" height="auto" width="auto"</iframe>
 	</div>
 	
 </body>
