--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <head>
-	<title>RetiCalc</title>
-	<link rel="stylesheet" type="text/css" href="stile.css" />
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script src="script.js" language="javascript">	</script>
-	<script type="text/javascript" id="cookiebanner" src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
 </head>
-<body>	
-	
+<body>
+    <div id = "titolo">
+        <a>Manfredonia</a>
+    </div>
 </body>
