--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
     <div id = "titolo">
-        <a>Manfredonia</a>
+        <a id = "testoTitolo">Manfredonia</a>
     </div>
 </body>
